# drt-energy-competition-winners-extraction-sc

./: .gitignore  README.md
.github/workflows/: actions.yml  release.yml
winners-extractor/: Cargo.toml
winners-extractor/interaction/: testnet-snippets.sh
winners-extractor/meta/: Cargo.toml
winners-extractor/src/: lib.rs
winners-extractor/wasm/: Cargo.toml
