[package]
name = "winners-extractor-wasm"
version = "0.0.0"
edition = "2018"
publish = false
authors = [ "you",]

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.winners-extractor]
path = ".."

[dependencies.dharitri-sc-wasm-adapter]
version = "0.11.1"
